# OSRC0001

./: .gitignore  README.md
Regras-OnlyFirst/: CMakeLists.txt
Regras-OnlyFirst/Compliant/ARR38-C/: 2_ARR38-C.c
Regras-OnlyFirst/Compliant/EXP34-C/: 2_EXP34-C.c
Regras-OnlyFirst/Compliant/FIO30-C/: 2_FIO30-C.c
Regras-OnlyFirst/Compliant/MEM34-C/: 2_MEM34-C.c
Regras-OnlyFirst/Compliant/MSC33-C/: 2_MSC33-C.c
Regras-OnlyFirst/Compliant/SIG30-C/: 2_SIG30-C.c
Regras-OnlyFirst/Compliant/STR38-C/: 3_STR38-C.c
Regras-OnlyFirst/Noncompliant/ERR33-C/: 1_ERR33-C.c
Regras-OnlyFirst/Noncompliant/EXP34-C/: 1_EXP34-C.c
Regras-OnlyFirst/Noncompliant/FIO30-C/: 1_FIO30-C.c
Regras-OnlyFirst/Noncompliant/FIO37-C/: 1_FIO37-C.c
Regras-OnlyFirst/Noncompliant/MEM30-C/: 1_ MEM30-C.c
Regras-OnlyFirst/Noncompliant/STR38-C/: 1_STR38-C.c
Regras-OnlyFirst/Noncompliant/test-lgtm/: 1_ MSC32-C.c  1_ARR38-C.c  1_ENV32-C.c  1_ENV33-C.c  1_EXP33-C.c  1_EXP34-C.c  1_FIO34-C.c  1_MEM34-C.c  1_MSC33-C.c  1_SIG30-C.c  1_STR31-C.c  1_STR32-C.c
Regras/Compliant/ARR38-C/: 4_ARR38-C.c  6_ARR38-C.c  B_2_ARR38-C.c  C_2_ARR38-C.c  C_4_ARR38-C.c  C_6_ARR38-C[INCOMPLETE].c
Regras/Compliant/ENV32-C/: 2_ENV32-C.c  4_ENV32-C.c
Regras/Compliant/ENV33-C/: 2_ENV33-C.c  5_ENV33-C.c
Regras/Compliant/ERR33-C/: 10_ERR33-C.c  11_ERR33-C.c  2_ERR33-C.c  4_ERR33-C.c  6_ERR33-C.c  8_ERR33-C.c
Regras/Compliant/EXP33-C/: 10_EXP33-C.c  12_EXP33-C.c  1_EXP33-C.c  5_EXP33-C.c  6_EXP33-C.c  8_EXP33-C.c
Regras/Compliant/EXP34-C/: 2_EXP34-C.c  4_EXP34-C.c  6_EXP34-C[INCOMPLETE].c
(+72 files in other folders)
